# trajcontrol_lisa

./: PlusDeviceSet_Server_NDIAurora_1Needle.xml  README.md  ROS2 command line examples for LISA robot.txt  comm_diagram.txt  package.xml  setup.cfg  setup.py
data/: create_matlab_workspace.m  create_matlab_workspace.m~  create_matlab_workspace_DQ.m  depth_0.csv  depth_20.csv  initJ_03.csv  my_data.csv  new_test_same_position_0mm_X_100mm_depth.csv  new_test_same_position_30mm_X_100mm_depth.csv  predictions.mat  registration_validation.csv  registration_validation_105mm_depth.csv  registration_validation_notinhome.csv  test.csv  test1.csv  test_00.csv  test_00_pred.mat  test_J_exp_01.csv  test_J_exp_01_pred.mat  test_J_exp_02_pred.mat  test_J_exp_03_pred.mat  test_J_geom_01.csv  test_J_geom_01_pred.mat  test_J_geom_02.csv  test_J_geom_02_pred.mat  test_J_pivot_01.csv  test_J_pivot_02.csv  test_J_pivot_02_pred.mat  test_J_pivot_03.csv  test_J_pivot_03_pred.mat  test_aurora_01.csv  test_aurora_01_pred.mat  test_aurora_02_pred.mat  test_pred.mat  test_registration_0mm_depth.csv  test_registration_10mm_depth.csv  test_registration_left_0mm_depth.csv  test_registration_left_10mm_depth.csv  test_registration_left_20mm_depth.csv  test_registration_left_30mm_depth.csv  (+84 more)
files/: fbg_10.mat  jacobian.csv  jacobian_02.csv  jacobian_exp.csv  jacobian_exp_old.csv  jacobian_geom.csv  jacobian_init.csv  registration.csv  registration_A.csv  registration_B.csv  registration_C.csv  registration_D.csv  registration_E.csv  registration_F.csv  registration_bkp.csv  registration_bkp2.csv  (+9 more)
(+1133 files in other folders)
