<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajcontrol</name>
  <version>0.0.0</version>
  <description>Needle trajectory compensation</description>
  <maintainer email="mcostabernardesmatias@bwh.harvard.edu">Mariana Bernardes</maintainer>
  <license>TODO: License declaration</license>

  <depend>python3-numpy</depend>
  <depend>python-numpy-quaternion-pip</depend>
  <depend>python3-scipy</depend>
  <depend>python-transforms3d-pip</depend>

  <depend>ros2_igtl_bridge</depend>
  <depend>stage_control_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
